[package]
name = "s8"
version = "0.1.0"
authors = ["NPEX42 <NPEX42@gmail.com>"]
edition = "2018"
keywords = ["asm", "baremetal", "libcore", "liballoc"]

[lib]
name = "s8_lib"
path = "src/lib.rs"

[[bin]]
name = "assembler"
path = "assembler/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lexer = "0.1.0"

[features]
default = []
libcore = ["liballoc"]
liballoc = []

